--- a/ejercicio02.html
+++ b/ejercicio02.html
@@ -3,7 +3,14 @@
   <head>
     <title>Ejercicio 02</title>
   </head>
-  <body>   
+  <body>
+    <div id="color">
+      <p>parrafo 1.</p>
+      <p>parrafo 2.</p>
+      <p>parrafo 3.</p>
+      <p>parrafo 4.</p>
+      <button id="boton">fondo oscuro</button>
+    </div>
     <script type="text/javascript" src="js/ejercicio02.js"></script>
   </body>
 </html>
