--- a/ejercicio05.html
+++ b/ejercicio05.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <link rel="stylesheet" href="css/style.css">  
 	<title>Recorrer árbol DOM</title>
 </head>
 <body>
-  <h1> CICLOS DE INFORMÁTICA EN EL IES INFANTA ELENA (Galapagar) </h1>
+  <h1> CICLOS DE INFORMÁTICA EN EL IES SAN ANDRÉS (Villabalter) </h1>
   <h2> Mañana </h2>
    <div id="mañana">
         <h3>&nbsp;&nbsp;&nbsp;&nbsp; Grado Superior </h3>
