--- a/ejercicio04.html
+++ b/ejercicio04.html
@@ -15,9 +15,9 @@
         <li>berenjena</li>
       </ul>
       <input type="text" class="AñadirElemento">
-      <button >Añadir</button>   
-      <button >BorrarUltimo</button>
-      <button >BorrarPrimero</button>
+      <button id="añadir">Añadir</button>   
+      <button id="borrarUlt">BorrarUltimo</button>
+      <button id="borrarPri">BorrarPrimero</button>
       <script type="text/javascript" src="js/ejercicio04.js"></script>
     </div>
   </body>
